# sprocketlib

./: .gitignore  README.md  pyproject.toml  setup.py
sprocketlib/: __init__.py  mesh.py  parts.py
sprocketlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sprocketlib/: base.py  mesh.py
tests/: test_sprocketlib.py
