[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprocketlib"
version = "0.1.3"
authors = [
  { name="FormulaCarbon"},
]
description = "Sprocket blueprint loading library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]